# just-gui

./: .gitignore  README.md  pyproject.toml
examples/: basic_app.toml
examples/plugins/display_plugin/: display_plugin.py  plugin.toml
examples/plugins/event_listener/: listener.py  plugin.toml
examples/plugins/simple_counter/: counter.py  plugin.toml  simple_counter.py
src/just_gui/: __init__.py  __main__.py
src/just_gui/core/: __init__.py  app.py  cli.py  i18n.py  theme_manager.py  ui_manager.py  view_manager.py
src/just_gui/events/: bus.py
src/just_gui/plugins/: base.py  manager.py  validator.py
src/just_gui/security/: decorators.py  sandbox.py
src/just_gui/state/: history.py  manager.py
src/just_gui/utils/: config_loader.py
